# lifetravel-backend

./: .gitignore  PROMPTS.md  README.md  bot_check_agent  bot_check_human
.claude/: settings.local.json
endpoint_api/: Dockerfile  pyproject.toml  run_local.sh
endpoint_api/src/: cfg.py  main.py  rabbitmq_publisher.py  rabbitmq_subscriber.py
flight_scraper/: .env.example  Dockerfile  pyproject.toml  run_local.sh  test_scraper.py
flight_scraper/src/: captcha_solver.py  cfg.py  human_mouse.py  human_typing.py  main.py  models.py  prompts.py  scraper.py
hotel_scraper/: .env.example  Dockerfile  pyproject.toml  run_local.sh  test_scraper.py
hotel_scraper/src/: main.py  models.py  prompts.py  scraper.py
personal_agent/: .env.example  Dockerfile  agent_runner.py  pyproject.toml  run_task.sh
personal_agent/src/: main.py  models.py  scraper.py
scraper_common/: pyproject.toml
scraper_common/docs/: human_interaction_simulation.md
scraper_common/src/scraper_common/: captcha_solver.py  cfg.py  data_store.py  human_interactions.py  human_mouse.py  human_scrolling.py  human_typing.py  model_tracer.py  patch_llm_io_trace.py  patch_model_errors.py  scraper_base.py
