[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel-scraper"
version = "0.1.0"
description = "Hotel search scraper using browser_use and Claude"
requires-python = ">=3.11"
dependencies = [
  "scraper-common",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
]

[tool.uv.sources]
scraper-common = { path = "../scraper_common" }
