[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-agent"
version = "0.1.0"
description = "Personal agent using browser_use and Claude"
requires-python = ">=3.11"
dependencies = [
  "scraper-common",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "python-dotenv>=1.0",
]

[tool.uv.sources]
scraper-common = { path = "../scraper_common" }
